--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.10,<3.13"
 dependencies = [
     "requests (>=2.32.4,<3.0.0)",
     "pandas (>=2.3.1,<3.0.0)",
-    "pathlib (>=1.0.1,<2.0.0)"
+    "pathlib (>=1.0.1,<2.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)"
 ]
 
 [tool.poetry]
